<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Application de Présence</string>
    <string name="BouttonAdd">Bouton Ajouter</string>
    <string name="add_new_class">Titre</string>
    <string name="Class_name">Modifier</string>
    <string name="subject_name">Nom De Sujet</string>
    <string name="cancel">Annuler</string>
    <string name="add">Ajouter</string>
    <string name="class_Name">Nom de Cours</string>
    <string name="show">Voir Comptes</string>
    <string name="RESGISTER">Inscrire</string>
    <string name="Email">Email</string>
    <string name="Subtitle">Sous Titre</string>
    <string name="Create_account">Creer un Compte</string>
    <string name="PHONE">Telephone</string>
    <string name="login_link">Vous avez déjà un compte ? Connexion</string>
    <string name="Title">Titre</string>
    <string name="Enregistrer">Enregistrer</string>
    <string name="retourner">Retourner</string>
    <string name="position">position</string>
    <string name="NOM_ETUDIANT">NOM ETUDIANT</string>
    <string name="identifiant">identifiant</string>
    <string name="mars_2024">mars 2024</string>
    <string name="bien_venu">Bein venu!</string>
    <string name="connexion">connexion</string>
    <string name="nom_utilisateur">NOM_UTILISATEUR</string>
    <string name="mot_de_passe">Mot De Passe</string>
    <string name="pas_de_compte">pas de compte? Inscrir ici. </string>
    <string name="show_langue">Afficher la langue</string>






</resources>