<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="8dp"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        >

        <TextView
            android:id="@+id/title_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_new_class"
            android:textStyle="bold"
            android:textColor="#03DAC5"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000"
            android:layout_margin="8dp"
            />

        <!-- EditText 1 -->
        <EditText
            android:id="@+id/class_id"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/Class_name"
            android:layout_margin="8dp"/>

        <!-- EditText 2 -->
        <EditText
            android:id="@+id/section_id"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/subject_name"
            android:layout_margin="8dp"/>

        <!-- RelativeLayout -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_weight="0.33"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:id="@+id/cancel"
                    android:layout_marginLeft="8dp"
                    android:backgroundTint="@color/bleu"

                    />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.33"/>
                <!-- Deuxième bouton -->
                <Button
                    android:id="@+id/add"
                    android:layout_weight="0.33"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/add"
                    android:backgroundTint="@color/bleu"/>


            </LinearLayout>

            <!-- Premier bouton -->

        </RelativeLayout>



    </LinearLayout>
</androidx.cardview.widget.CardView>
