<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.appbar.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="#000080">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:background="#000080"
            >

            <!-- LinearLayout à l'intérieur de RelativeLayout -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerVertical="true"
                android:layout_marginLeft="36dp"
                android:layout_marginRight="36dp"
                >

                <TextView
                    android:id="@+id/title_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingBottom="10dp"
                    android:text="@string/Title"
                    android:textSize="20dp"
                    android:textColor="#ffffff"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/subtitel_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/Subtitle"
                    android:textSize="16dp"
                    android:textColor="#ffffff"
                    android:textStyle="bold" />

            </LinearLayout>
            <ImageButton
                android:id="@+id/save"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:src="@drawable/baseline_cloud_download_24"
                android:layout_alignParentRight="true"
                android:contentDescription="@string/Enregistrer"/>

            <ImageButton
                android:id="@+id/back"
                android:layout_width="48dp"
                android:layout_height="15dp"
                android:layout_marginTop="20dp"
                android:background="@android:color/transparent"
                android:src="@drawable/icon_back1_foreground"
                android:contentDescription="@string/retourner"/>


        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

</com.google.android.material.appbar.AppBarLayout>
